--- a/android app/app/src/main/AndroidManifest.xml
+++ b/android app/app/src/main/AndroidManifest.xml
@@ -14,6 +14,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication">
         <activity
+            android:name=".LoginActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity"/>
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
@@ -34,14 +38,14 @@
             android:name=".SoporteActivity"
             android:exported="false"
             android:parentActivityName=".MainActivity" />
-                <activity
-                    android:name=".PerfilActivity"
-                    android:exported="false"
-                    android:parentActivityName=".MainActivity" />
-                <activity
-                    android:name=".DetallesProductoActivity"
-                    android:exported="false"
-                    android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".PerfilActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
+        <activity
+            android:name=".DetallesProductoActivity"
+            android:exported="false"
+            android:parentActivityName=".MainActivity" />
     </application>
 
 </manifest>
